<resources>
    <string name="geo_location_accuracy_default">Accuracy: unknown</string>
    <string name="geo_location_accuracy">Accuracy: %1$s m</string>
    <string name="nocardspacetitle">No Storage Space</string>
    <string name="lowcardspacetitle">Low Storage Space</string>
    <string name="nocardspacedialog">The SD card on this device is full and you can no longer collect data. You must clear space on the SD card in order to continue.</string>
    <string name="lowcardspacedialog">You have %%% MB of storage space left on this device\'s SD card. Once the SD card is full, you will no longer be able to collect data.</string>
    <string name="getgeo">Check Geo Location</string>
    <string name="lat">Lat</string>
    <string name="lon">Lon</string>
    <string name="elevation">Height</string>
    <string name="submitbutton">Submit</string>
    <string name="geodialog">Please enable location settings</string>
    <string name="settings">Settings</string>
    <string name="preferences_general_section">General</string>
    <string name="aboutlabel">About</string>
    <string name="otherinstructions">Please enter a description</string>
    <string name="deleteresponse">Delete Response</string>
    <string name="othertext">Other...</string>
    <string name="surveylanglabel">Survey Languages</string>
    <string name="scanbarcode">Scan Barcode</string>
    <string name="toosmallerr">Value is too small. Minimum value: </string>
    <string name="toolargeerr">Value is too large. Maximum value: </string>
    <string name="baddatatypeerr">Answer must be numeric</string>
    <string name="reloadsurveyslabel">Reload all surveys</string>
    <string name="reloadsurveysdesc">Deletes and re-downloads assigned surveys (only run if instructed)</string>
    <string name="conftitle">Please Confirm</string>
    <string name="reloadconftext">Are you sure you want to purge and re-download surveys?</string>
    <string name="langoption">Languages</string>
    <string name="langmandatorytitle">Invalid Selection</string>
    <string name="langmandatorytext">You must select at least one language</string>
    <string name="preference_download_form_title">Download form using form ID</string>
    <string name="preference_download_form_subtitle">Only run if instructed</string>
    <string name="downloadsurveylabel">Download Form</string>
    <string name="downloadsurveyinstr">Enter the form id you wish to download.</string>
    <string name="deletealldatawarning">This will permanently delete all data (surveys, responses, images, and users) on the device. This operation is not reversible. Click OK to proceed or cancel to abort.</string>
    <string name="delete_responses_warning">This will permanently delete responses, images, and zip files on the device. This operation is not reversible. Click OK to proceed or cancel to abort.</string>
    <string name="unsentdatawarning">Some responses are not submitted. Make sure you export them before deletion. This operation is not reversible. Click OK to proceed or cancel to abort.</string>
    <string name="deleteonewarning">This will permanently delete this survey response. Click OK to proceed or cancel to abort.</string>
    <string name="nextbutton">Next</string>
    <string name="cleartitle">Clear Survey Answers</string>
    <string name="cleardesc">Are you sure you want to clear your responses?</string>
    <string name="authtitle">Authorization Required</string>
    <string name="authtext">Please enter the administrator passcode: </string>
    <string name="authfailed">Authorization Failed</string>
    <string name="invalidpassword">Invalid passcode</string>
    <string name="clearquestion">Clear Response</string>
    <string name="clearquestiondesc">Do you want to clear the response to this question?</string>
    <string name="identlabel">Device Identifier</string>
    <string name="bootstrapstart">Loading survey data from SD card</string>
    <string name="bootstrapcomplete">Done loading data from SD card</string>
    <string name="bootstraperror">Error processing bootstrap zip file</string>
    <string name="bootstrap_invalid_app">Error: Form doesn\'t belong to this Flow instance</string>
    <string name="transmissionhist">Transmission History</string>
    <string name="transstartdate">Started:</string>
    <string name="transenddate">Finished:</string>
    <string name="resetalldesc">Permanently deletes all surveys, responses (including images and exported zip files) and users</string>
    <string name="reset_responses_desc">Permanently deletes all survey responses (including images and exported zip files)</string>
    <string name="checksd">Available storage</string>
    <string name="sdmissing">SD card missing or unmounted. Ensure that you have turned off \"USB File Copying\"</string>
    <string name="pickdate">Select Date</string>
    <string name="pleasewaitforbootstrap">Please wait until the bootstrap file has finished processing.</string>
    <string name="clear_data_success">Data successfully deleted from the device</string>
    <string name="clear_data_error">Error deleting data from the device</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="sort">Sort</string>
    <string name="stats">Stats</string>
    <string name="data_points_sync_error_message_network">Download failed. No connection.</string>
    <string name="data_points_sync_error_message_assignment">Download failed. Assignment missing.</string>
    <string name="data_points_sync_error_message_default">Download failed</string>
    <string name="prefill_title">Pre-fill Responses</string>
    <string name="prefill_text">Pre-fill form with previous answers?</string>
    <string name="data_sync_all">Synced Forms: %1$d - Failed: %2$d</string>
    <string name="data_sync_synced">Synced Forms: %1$d</string>
    <string name="data_sync_error_form_deleted_title">Form deleted</string>
    <string name="data_sync_error_form_deleted_text">Form %1$s has been deleted</string>
    <string name="please_restart">Please, restart the app</string>
    <string name="no_datapoints_error_text">You have no data points</string>
    <string name="no_search_results_error_text">No results found</string>
    <string name="no_survey_selected_text">You have no Survey selected. Open the side menu to select one.</string>
    <string name="more">More</string>
    <string name="search_hint">Search Data Point</string>
    <string name="delete_survey_dialog_message">Delete %1$s?</string>
    <string name="error_responses">Some responses contain errors. You must review the following questions before you can submit:</string>
    <string name="error_question_mandatory">This response is required</string>
    <string name="repeat_answer">Please, repeat answer</string>
    <string name="error_answer_match">Answers do not match</string>
    <string name="error_img_preview">Can\'t load image preview</string>
    <string name="error_video_preview">Can\'t load video preview</string>
    <string name="caddisfly_test">Go to test</string>
    <string name="error_empty_form">Empty forms cannot be submitted. Please, add the corresponding responses first.</string>
    <string name="select">please select</string>
    <string name="clear_value_msg">Do you want to delete this value?</string>
    <string name="type_code">type code</string>
    <string name="or">or</string>
    <string name="capture_shape">capture shape</string>
    <string name="view_shape">view shape</string>
    <string name="delete_point_title">Delete point?</string>
    <string name="delete_shape_title">Delete shape?</string>
    <string name="repeat_group">Repeat group</string>
    <string name="repetitions">Repetitions:</string>
    <string name="view_map">View map</string>
    <string name="delete_group_title">Delete group</string>
    <string name="delete_group_text">Do you want to delete this group?</string>
    <string name="add_signature">Add signature</string>
    <string name="modify_signature">Edit signature</string>
    <string name="signed_by">Signed by:</string>
    <string name="signature_terms">I understand this is an electronic representation of my signature</string>
    <string name="image_location_unknown">Geolocation unknown</string>
    <string name="image_location_reading">Reading geolocation</string>
    <string name="image_location_saved">Geolocation saved</string>
    <string name="stats_total">Total Data Points:</string>
    <string name="stats_week">Last 7 days:</string>
    <string name="stats_today">Today:</string>
    <string name="distance_label">Distance:</string>
    <string name="tab_datapoints">DATA POINTS</string>
    <string name="tab_map">MAP</string>
    <string name="order_date">Date</string>
    <string name="order_distance">Distance</string>
    <string name="order_status">Status</string>
    <string name="order_name">Name</string>
    <string name="unknown">Unnamed data point</string>
    <string name="last_modified_monitored">Last Modified:</string>
    <string name="last_modified_regular">Submitted:</string>
    <string name="last_response">Last Response:</string>
    <string name="error_missing_cascade">Cascade files are not downloaded</string>
    <string name="error_missing_form">Form not found. Please re-download all the forms</string>
    <string name="tab_forms">FORMS</string>
    <string name="tab_history">HISTORY</string>
    <string name="status_queued">Queued</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_uploaded">Uploaded</string>
    <string name="status_failed">Failed</string>
    <string name="status_saved">Saved</string>
    <string name="status_submitted">Submitted</string>
    <string name="app_update_activity">Akvo Flow Update</string>
    <string name="update">Update</string>
    <string name="not_now">Not now</string>
    <string name="clicktoinstall">New Flow version is downloaded. Do you want to install it now?</string>
    <string name="apk_upgrade_error">Error downloading Flow update.</string>
    <string name="time_check_activity">Date and Time</string>
    <string name="time_warning">Your phone time is inaccurate! Adjust your clock and try again. Your phone date and time is:</string>
    <string name="adjust_date">Adjust time</string>
    <string name="downloading_forms">Downloading forms</string>
    <string name="error_form_sync_title">Error syncing forms</string>
    <string name="error_assignment_read">Form assignments could not be read from the Flow dashboard.</string>
    <string name="error_form_header">Form %1$s could not be read from Flow dashboard.</string>
    <string name="error_form_download">Ensure the form is published, and your local date/time settings are OK.</string>
    <string name="form_deleted">This form has been deleted.</string>
    <string name="sync_error_message">It has probably been deleted</string>
    <string name="sync_error_title">Form %1$s does not exist</string>
    <string name="geoshape_area">Area</string>
    <string name="geoshape_line">Line</string>
    <string name="geoshape_points">Points</string>
    <string name="location_unknown">Location is not known</string>
    <string name="clearbutton">Clear</string>
    <string name="auto_geo_location_pending">Waiting for device location...</string>
    <string name="about_view_title">Akvo Flow App</string>
    <string name="app_icon_description">App icon</string>
    <string name="about_view_subtitle">Capture better quality data, faster</string>
    <string name="about_view_copyright">Copyright © 2010-%1$s Stichting Akvo</string>
    <string name="about_view_update">Check for Updates</string>
    <string name="about_view_legal">Legal Information</string>
    <string name="about_view_release_notes">Release Notes</string>
    <string name="about_view_terms">Terms of Use</string>
</resources>