<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flowapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/more_submenu"
        android:title="@string/more"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="100"
        flowapp:showAsAction="always">

        <menu>

            <item
                android:id="@+id/edit_lang"
                android:title="@string/langoption"/>
            <item
                android:id="@+id/clear"
                android:title="@string/clearbutton"/>
            <item
                android:id="@+id/prefill"
                android:title="@string/prefill_title"/>
            <item
                android:id="@+id/view_map"
                android:title="@string/view_map"/>
        </menu>

    </item>

</menu>