<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:flowapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        flowapp:showAsAction="always"/>

    <item
        android:id="@+id/sync_records"
        android:orderInCategory="101"
        android:title="@string/sync"
        flowapp:showAsAction="always"/>

    <item
        android:id="@+id/order_by"
        android:orderInCategory="102"
        android:title="@string/sort"
        flowapp:showAsAction="always"/>

    <item
        android:id="@+id/stats"
        android:orderInCategory="103"
        android:title="@string/stats"
        flowapp:showAsAction="always"/>
</menu>