<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools">

    <include layout="@layout/question_header"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_code"
                android:singleLine="true"
                android:imeOptions="actionDone"
                />

        <TextView
                android:id="@+id/manual_input_separator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/black_disabled"
                android:textSize="12sp"
                android:visibility="gone"
                tools:visibility="visible"
                />

        <Button
                android:id="@+id/scan_btn"
                style="@style/button_primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scanbarcode"
                android:textSize="16sp"
                />
    </LinearLayout>

</merge>
