<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools">

    <include layout="@layout/question_header"/>

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/manual_geo_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:alpha="0.3"
                android:orientation="horizontal">

            <TableLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:stretchColumns="1">

                <TableRow>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lat"/>

                    <EditText
                            android:id="@+id/lat_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal|numberSigned"/>

                </TableRow>

                <TableRow>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lon"/>

                    <EditText
                            android:id="@+id/lon_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal|numberSigned"/>

                </TableRow>

                <TableRow>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:text="@string/elevation"/>

                    <EditText
                            android:id="@+id/height_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="numberDecimal|numberSigned"/>
                </TableRow>
            </TableLayout>

            <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="center">

                <TextView
                        android:id="@+id/acc_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/geo_location_accuracy_default"/>
            </FrameLayout>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/auto_geo_location_progress"
                android:orientation="horizontal"
                tools:visibility="visible"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/progressBar"/>

            <TextView
                    android:text="@string/auto_geo_location_pending"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="18sp"
                  />
        </LinearLayout>


    </FrameLayout>

    <Button
            android:id="@+id/geo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getgeo"
            android:textSize="16sp"
            style="@style/button_primary"/>


</merge>
